--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
 [v0.3]
+- set 'all' as default argument for !order list
 - add singular command for order_remove and set orders_remove as it's alias
 - make order_list main command and set orders_list as it's alias
 - change funcitons' arguments checking and error messages
@@ -13,5 +14,5 @@
 - send order to restaurant automatically
 - add posibility to add order for another person
 - remove orders automatically at midnight
-- select contats automatically at noon
+- select contacts automatically at noon
 - weighted contact selection algorithm
